--- a/about-al-fajer-fm/index.html
+++ b/about-al-fajer-fm/index.html
@@ -1782,13 +1782,13 @@
 																					<strong>Sangeetha B</strong></h3>
 																				<h4
 																					class="mg-md tc-midnight-green-eagle-green">
-																					<span style="color: #cd9f58;">Deputy
+																					<span style="color: #D08B0B;">Deputy
 																						CEO</span></h4>
 
 																			</div>
 																		</div>
 																		<div class="separator  small left  "
-																			style="margin-top: 10px;margin-bottom: 10px;background-color: #cd9f58;">
+																			style="margin-top: 10px;margin-bottom: 10px;background-color: #D08B0B;">
 																		</div>
 																		<div class="vc_empty_space"
 																			style="height: 20px"><span
@@ -1919,7 +1919,7 @@
 																			</div>
 																		</div>
 																		<div class="separator  small center  "
-																			style="margin-top: 10px;margin-bottom: 10px;background-color: #cd9f58;">
+																			style="margin-top: 10px;margin-bottom: 10px;background-color: #D08B0B;">
 																		</div>
 
 																		<div
@@ -1965,7 +1965,7 @@
 																			</div>
 																		</div>
 																		<div class="separator  small center  "
-																			style="margin-top: 10px;margin-bottom: 10px;background-color: #cd9f58;">
+																			style="margin-top: 10px;margin-bottom: 10px;background-color: #D08B0B;">
 																		</div>
 
 																		<div
@@ -2012,7 +2012,7 @@
 																			</div>
 																		</div>
 																		<div class="separator  small center  "
-																			style="margin-top: 10px;margin-bottom: 10px;background-color: #cd9f58;">
+																			style="margin-top: 10px;margin-bottom: 10px;background-color: #D08B0B;">
 																		</div>
 
 																		<div
@@ -2066,7 +2066,7 @@
 																			</div>
 																		</div>
 																		<div class="separator  small center  "
-																			style="margin-top: 10px;margin-bottom: 10px;background-color: #cd9f58;">
+																			style="margin-top: 10px;margin-bottom: 10px;background-color: #D08B0B;">
 																		</div>
 
 																		<div
@@ -2112,7 +2112,7 @@
 																			</div>
 																		</div>
 																		<div class="separator  small center  "
-																			style="margin-top: 10px;margin-bottom: 10px;background-color: #cd9f58;">
+																			style="margin-top: 10px;margin-bottom: 10px;background-color: #D08B0B;">
 																		</div>
 
 																		<div
@@ -2158,7 +2158,7 @@
 																			</div>
 																		</div>
 																		<div class="separator  small center  "
-																			style="margin-top: 10px;margin-bottom: 10px;background-color: #cd9f58;">
+																			style="margin-top: 10px;margin-bottom: 10px;background-color: #D08B0B;">
 																		</div>
 
 																		<div
@@ -2211,7 +2211,7 @@
 																			</div>
 																		</div>
 																		<div class="separator  small center  "
-																			style="margin-top: 10px;margin-bottom: 10px;background-color: #cd9f58;">
+																			style="margin-top: 10px;margin-bottom: 10px;background-color: #D08B0B;">
 																		</div>
 
 																		<div
@@ -2257,7 +2257,7 @@
 																			</div>
 																		</div>
 																		<div class="separator  small center  "
-																			style="margin-top: 10px;margin-bottom: 10px;background-color: #cd9f58;">
+																			style="margin-top: 10px;margin-bottom: 10px;background-color: #D08B0B;">
 																		</div>
 
 																		<div
@@ -2303,7 +2303,7 @@
 																			</div>
 																		</div>
 																		<div class="separator  small center  "
-																			style="margin-top: 10px;margin-bottom: 10px;background-color: #cd9f58;">
+																			style="margin-top: 10px;margin-bottom: 10px;background-color: #D08B0B;">
 																		</div>
 
 																		<div
@@ -2364,7 +2364,7 @@
 																			</div>
 																		</div>
 																		<div class="separator  small center  "
-																			style="margin-top: 10px;margin-bottom: 10px;background-color: #cd9f58;">
+																			style="margin-top: 10px;margin-bottom: 10px;background-color: #D08B0B;">
 																		</div>
 
 																		<div
@@ -2410,7 +2410,7 @@
 																			</div>
 																		</div>
 																		<div class="separator  small center  "
-																			style="margin-top: 10px;margin-bottom: 10px;background-color: #cd9f58;">
+																			style="margin-top: 10px;margin-bottom: 10px;background-color: #D08B0B;">
 																		</div>
 
 																		<div
@@ -2505,7 +2505,7 @@
 															<div id="text-5" class="widget widget_text">
 																<h5>Dubai</h5>
 																<div class="textwidget">
-																	<p>Flat No: 1802C Ontario Tower, Business Bay, Dubai UAE<br />
+																	<p>Office no: 1802C Ontario Tower, Business Bay, Dubai UAE<br />
 																		Email: Info@Meridianprimefm.com<br />
 																		Phone: +97142991801</p>
 																</div>
@@ -2638,14 +2638,14 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-63682c6857ab583"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-63682c6857ab583"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-63682c6857ab583"]:hover .mpc-icon-column__heading {
-			color: #cd9f58;
+			color: #D08B0B;
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-63682c6857ab583"]:hover .mpc-icon-column__description {
@@ -2683,14 +2683,14 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-18682c6857ac13f"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-18682c6857ac13f"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-18682c6857ac13f"]:hover .mpc-icon-column__heading {
-			color: #cd9f58;
+			color: #D08B0B;
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-18682c6857ac13f"]:hover .mpc-icon-column__description {
@@ -2746,7 +2746,7 @@
 			padding-right: 20px;
 			padding-bottom: 15px;
 			padding-left: 10px;
-			background: #cd9f58;
+			background: #D08B0B;
 		}
 
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-74682c6857ae304"]:hover .mpc-icon-column__content-wrap,
@@ -2755,7 +2755,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-74682c6857ae304"]:hover .mpc-icon-column__heading {
-			color: #cd9f58;
+			color: #D08B0B;
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-74682c6857ae304"]:hover .mpc-icon-column__description {
@@ -2779,7 +2779,7 @@
 
 		.mpc-icon[data-id="mpc_icon-18682c6857ae36c"] {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 60px;
 			padding: 10px;
@@ -2790,17 +2790,17 @@
 
 		.mpc-icon[data-id="mpc_icon-18682c6857ae36c"] i {
 			font-size: 32px;
-			color: #cd9f58;
+			color: #D08B0B;
 		}
 
 		.mpc-icon.mpc-icon-hover[data-id="mpc_icon-18682c6857ae36c"]:hover,
 		.mpc-parent-hover:hover .mpc-icon.mpc-icon-hover[data-id="mpc_icon-18682c6857ae36c"],
 		.mpc-active .mpc-icon.mpc-icon-hover[data-id="mpc_icon-18682c6857ae36c"] {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 60px;
-			background: #cd9f58;
+			background: #D08B0B;
 		}
 
 		.mpc-icon.mpc-icon-hover[data-id="mpc_icon-18682c6857ae36c"]:hover i,
@@ -2815,7 +2815,7 @@
 			padding-right: 20px;
 			padding-bottom: 15px;
 			padding-left: 10px;
-			background: #cd9f58;
+			background: #D08B0B;
 		}
 
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-25682c6857ae749"]:hover .mpc-icon-column__content-wrap,
@@ -2824,7 +2824,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-25682c6857ae749"]:hover .mpc-icon-column__heading {
-			color: #cd9f58;
+			color: #D08B0B;
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-25682c6857ae749"]:hover .mpc-icon-column__description {
@@ -2848,7 +2848,7 @@
 
 		.mpc-icon[data-id="mpc_icon-56682c6857ae79a"] {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 60px;
 			padding: 10px;
@@ -2859,17 +2859,17 @@
 
 		.mpc-icon[data-id="mpc_icon-56682c6857ae79a"] i {
 			font-size: 32px;
-			color: #cd9f58;
+			color: #D08B0B;
 		}
 
 		.mpc-icon.mpc-icon-hover[data-id="mpc_icon-56682c6857ae79a"]:hover,
 		.mpc-parent-hover:hover .mpc-icon.mpc-icon-hover[data-id="mpc_icon-56682c6857ae79a"],
 		.mpc-active .mpc-icon.mpc-icon-hover[data-id="mpc_icon-56682c6857ae79a"] {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 60px;
-			background: #cd9f58;
+			background: #D08B0B;
 		}
 
 		.mpc-icon.mpc-icon-hover[data-id="mpc_icon-56682c6857ae79a"]:hover i,
@@ -2884,7 +2884,7 @@
 			padding-right: 20px;
 			padding-bottom: 15px;
 			padding-left: 10px;
-			background: #cd9f58;
+			background: #D08B0B;
 		}
 
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-89682c6857aeaf6"]:hover .mpc-icon-column__content-wrap,
@@ -2893,7 +2893,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-89682c6857aeaf6"]:hover .mpc-icon-column__heading {
-			color: #cd9f58;
+			color: #D08B0B;
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-89682c6857aeaf6"]:hover .mpc-icon-column__description {
@@ -2917,7 +2917,7 @@
 
 		.mpc-icon[data-id="mpc_icon-91682c6857aeb40"] {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 60px;
 			padding: 10px;
@@ -2928,17 +2928,17 @@
 
 		.mpc-icon[data-id="mpc_icon-91682c6857aeb40"] i {
 			font-size: 32px;
-			color: #cd9f58;
+			color: #D08B0B;
 		}
 
 		.mpc-icon.mpc-icon-hover[data-id="mpc_icon-91682c6857aeb40"]:hover,
 		.mpc-parent-hover:hover .mpc-icon.mpc-icon-hover[data-id="mpc_icon-91682c6857aeb40"],
 		.mpc-active .mpc-icon.mpc-icon-hover[data-id="mpc_icon-91682c6857aeb40"] {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 60px;
-			background: #cd9f58;
+			background: #D08B0B;
 		}
 
 		.mpc-icon.mpc-icon-hover[data-id="mpc_icon-91682c6857aeb40"]:hover i,
@@ -2953,7 +2953,7 @@
 			padding-right: 20px;
 			padding-bottom: 15px;
 			padding-left: 10px;
-			background: #cd9f58;
+			background: #D08B0B;
 		}
 
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-87682c6857aeefc"]:hover .mpc-icon-column__content-wrap,
@@ -2962,7 +2962,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-87682c6857aeefc"]:hover .mpc-icon-column__heading {
-			color: #cd9f58;
+			color: #D08B0B;
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-87682c6857aeefc"]:hover .mpc-icon-column__description {
@@ -2986,7 +2986,7 @@
 
 		.mpc-icon[data-id="mpc_icon-68682c6857aef4a"] {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 60px;
 			padding: 10px;
@@ -2997,17 +2997,17 @@
 
 		.mpc-icon[data-id="mpc_icon-68682c6857aef4a"] i {
 			font-size: 32px;
-			color: #cd9f58;
+			color: #D08B0B;
 		}
 
 		.mpc-icon.mpc-icon-hover[data-id="mpc_icon-68682c6857aef4a"]:hover,
 		.mpc-parent-hover:hover .mpc-icon.mpc-icon-hover[data-id="mpc_icon-68682c6857aef4a"],
 		.mpc-active .mpc-icon.mpc-icon-hover[data-id="mpc_icon-68682c6857aef4a"] {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 60px;
-			background: #cd9f58;
+			background: #D08B0B;
 		}
 
 		.mpc-icon.mpc-icon-hover[data-id="mpc_icon-68682c6857aef4a"]:hover i,
@@ -3022,7 +3022,7 @@
 			padding-right: 20px;
 			padding-bottom: 15px;
 			padding-left: 10px;
-			background: #cd9f58;
+			background: #D08B0B;
 		}
 
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-71682c6857af268"]:hover .mpc-icon-column__content-wrap,
@@ -3031,7 +3031,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-71682c6857af268"]:hover .mpc-icon-column__heading {
-			color: #cd9f58;
+			color: #D08B0B;
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-71682c6857af268"]:hover .mpc-icon-column__description {
@@ -3055,7 +3055,7 @@
 
 		.mpc-icon[data-id="mpc_icon-58682c6857af2ab"] {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 60px;
 			padding: 10px;
@@ -3066,17 +3066,17 @@
 
 		.mpc-icon[data-id="mpc_icon-58682c6857af2ab"] i {
 			font-size: 32px;
-			color: #cd9f58;
+			color: #D08B0B;
 		}
 
 		.mpc-icon.mpc-icon-hover[data-id="mpc_icon-58682c6857af2ab"]:hover,
 		.mpc-parent-hover:hover .mpc-icon.mpc-icon-hover[data-id="mpc_icon-58682c6857af2ab"],
 		.mpc-active .mpc-icon.mpc-icon-hover[data-id="mpc_icon-58682c6857af2ab"] {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 60px;
-			background: #cd9f58;
+			background: #D08B0B;
 		}
 
 		.mpc-icon.mpc-icon-hover[data-id="mpc_icon-58682c6857af2ab"]:hover i,
@@ -3091,7 +3091,7 @@
 			padding-right: 20px;
 			padding-bottom: 15px;
 			padding-left: 10px;
-			background: #cd9f58;
+			background: #D08B0B;
 		}
 
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-12682c6857af630"]:hover .mpc-icon-column__content-wrap,
@@ -3100,7 +3100,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-12682c6857af630"]:hover .mpc-icon-column__heading {
-			color: #cd9f58;
+			color: #D08B0B;
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-12682c6857af630"]:hover .mpc-icon-column__description {
@@ -3124,7 +3124,7 @@
 
 		.mpc-icon[data-id="mpc_icon-85682c6857af676"] {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 60px;
 			padding: 10px;
@@ -3135,17 +3135,17 @@
 
 		.mpc-icon[data-id="mpc_icon-85682c6857af676"] i {
 			font-size: 32px;
-			color: #cd9f58;
+			color: #D08B0B;
 		}
 
 		.mpc-icon.mpc-icon-hover[data-id="mpc_icon-85682c6857af676"]:hover,
 		.mpc-parent-hover:hover .mpc-icon.mpc-icon-hover[data-id="mpc_icon-85682c6857af676"],
 		.mpc-active .mpc-icon.mpc-icon-hover[data-id="mpc_icon-85682c6857af676"] {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 60px;
-			background: #cd9f58;
+			background: #D08B0B;
 		}
 
 		.mpc-icon.mpc-icon-hover[data-id="mpc_icon-85682c6857af676"]:hover i,
@@ -3160,7 +3160,7 @@
 			padding-right: 20px;
 			padding-bottom: 15px;
 			padding-left: 10px;
-			background: #cd9f58;
+			background: #D08B0B;
 		}
 
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-11682c6857af98c"]:hover .mpc-icon-column__content-wrap,
@@ -3169,7 +3169,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-11682c6857af98c"]:hover .mpc-icon-column__heading {
-			color: #cd9f58;
+			color: #D08B0B;
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-11682c6857af98c"]:hover .mpc-icon-column__description {
@@ -3193,7 +3193,7 @@
 
 		.mpc-icon[data-id="mpc_icon-33682c6857af9d4"] {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 60px;
 			padding: 10px;
@@ -3204,17 +3204,17 @@
 
 		.mpc-icon[data-id="mpc_icon-33682c6857af9d4"] i {
 			font-size: 32px;
-			color: #cd9f58;
+			color: #D08B0B;
 		}
 
 		.mpc-icon.mpc-icon-hover[data-id="mpc_icon-33682c6857af9d4"]:hover,
 		.mpc-parent-hover:hover .mpc-icon.mpc-icon-hover[data-id="mpc_icon-33682c6857af9d4"],
 		.mpc-active .mpc-icon.mpc-icon-hover[data-id="mpc_icon-33682c6857af9d4"] {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 60px;
-			background: #cd9f58;
+			background: #D08B0B;
 		}
 
 		.mpc-icon.mpc-icon-hover[data-id="mpc_icon-33682c6857af9d4"]:hover i,
@@ -3234,7 +3234,7 @@
 
 		.mpc-divider-wrap[data-id="mpc_divider-66682c6857b22b3"] .mpc-divider__line>span {
 			border-top-style: solid;
-			border-top-color: #cd9f58;
+			border-top-color: #D08B0B;
 			border-top-width: 4px;
 			margin-top: 1px;
 		}
@@ -3271,11 +3271,11 @@
 			font-size: 14px;
 			text-align: center;
 			text-transform: capitalize;
-			background: #cd9f58;
+			background: #D08B0B;
 		}
 
 		.mpc-tooltip[id="mpc_tooltip-61682c6857b2ecd"] .mpc-arrow {
-			border-color: #cd9f58
+			border-color: #D08B0B
 		}
 
 		.mpc-hotspot[id="mpc_hotspot-743682c6857b346e"] {
@@ -3303,11 +3303,11 @@
 			line-height: 1.2;
 			text-align: center;
 			text-transform: capitalize;
-			background: #cd9f58;
+			background: #D08B0B;
 		}
 
 		.mpc-tooltip[id="mpc_tooltip-48682c6857b34a4"] .mpc-arrow {
-			border-color: #cd9f58
+			border-color: #D08B0B
 		}
 
 		.mpc-hotspot[id="mpc_hotspot-59682c6857b36c1"] {
@@ -3335,11 +3335,11 @@
 			line-height: 1.2;
 			text-align: center;
 			text-transform: capitalize;
-			background: #cd9f58;
+			background: #D08B0B;
 		}
 
 		.mpc-tooltip[id="mpc_tooltip-33682c6857b36f1"] .mpc-arrow {
-			border-color: #cd9f58
+			border-color: #D08B0B
 		}
 
 		.mpc-hotspot[id="mpc_hotspot-789682c6857b38bc"] {
@@ -3367,11 +3367,11 @@
 			line-height: 1.2;
 			text-align: center;
 			text-transform: capitalize;
-			background: #cd9f58;
+			background: #D08B0B;
 		}
 
 		.mpc-tooltip[id="mpc_tooltip-72682c6857b38dd"] .mpc-arrow {
-			border-color: #cd9f58
+			border-color: #D08B0B
 		}
 
 		.mpc-hotspot[id="mpc_hotspot-851682c6857b3a18"] {
@@ -3399,11 +3399,11 @@
 			line-height: 1.2;
 			text-align: center;
 			text-transform: capitalize;
-			background: #cd9f58;
+			background: #D08B0B;
 		}
 
 		.mpc-tooltip[id="mpc_tooltip-27682c6857b3a40"] .mpc-arrow {
-			border-color: #cd9f58
+			border-color: #D08B0B
 		}
 
 		.mpc-textblock[id="mpc_textblock-7682c6857b54da"] {
@@ -3425,7 +3425,7 @@
 
 		.mpc-divider-wrap[data-id="mpc_divider-4682c6857b972b"] .mpc-divider__line>span {
 			border-top-style: solid;
-			border-top-color: #cd9f58;
+			border-top-color: #D08B0B;
 			border-top-width: 4px;
 			margin-top: 1px;
 		}
