--- a/cleaning/index.html
+++ b/cleaning/index.html
@@ -1402,7 +1402,7 @@
 															<div id="text-5" class="widget widget_text">
 																<h5>Dubai</h5>
 																<div class="textwidget">
-																	<p>Flat No: 1802C Ontario Tower, Business Bay, Dubai UAE<br />
+																	<p>Office no: 1802C Ontario Tower, Business Bay, Dubai UAE<br />
 																		Email: Info@Meridianprimefm.com<br />
 																		Phone: +97142991801</p>
 																</div>
@@ -1533,7 +1533,7 @@
 
 		.mpc-divider-wrap[data-id="mpc_divider-69682c5b538200d"] .mpc-divider__line>span {
 			border-top-style: solid;
-			border-top-color: #cd9f58;
+			border-top-color: #D08B0B;
 			border-top-width: 2px;
 			margin-top: 1px;
 		}
@@ -1605,7 +1605,7 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-11682c5b538b1a0"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-11682c5b538b1a0"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
@@ -1613,7 +1613,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-11682c5b538b1a0"] .mpc-icon-column__heading {
 			margin-top: 5px;
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1621,7 +1621,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-11682c5b538b1a0"] .mpc-icon-column__description {
-			color: #cd9f58;
+			color: #D08B0B;
 			text-align: center;
 		}
 
@@ -1655,7 +1655,7 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-48682c5b538ece1"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-48682c5b538ece1"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
@@ -1663,7 +1663,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-48682c5b538ece1"] .mpc-icon-column__heading {
 			margin-top: 5px;
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1671,7 +1671,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-48682c5b538ece1"] .mpc-icon-column__description {
-			color: #cd9f58;
+			color: #D08B0B;
 			text-align: center;
 		}
 
@@ -1705,7 +1705,7 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-55682c5b538fcf6"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-55682c5b538fcf6"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
@@ -1713,7 +1713,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-55682c5b538fcf6"] .mpc-icon-column__heading {
 			margin-top: 5px;
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1721,7 +1721,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-55682c5b538fcf6"] .mpc-icon-column__description {
-			color: #cd9f58;
+			color: #D08B0B;
 			text-align: center;
 		}
 
@@ -1755,7 +1755,7 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-61682c5b539080d"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-61682c5b539080d"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
@@ -1763,7 +1763,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-61682c5b539080d"] .mpc-icon-column__heading {
 			margin-top: 5px;
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1771,7 +1771,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-61682c5b539080d"] .mpc-icon-column__description {
-			color: #cd9f58;
+			color: #D08B0B;
 			text-align: center;
 		}
 
@@ -1815,7 +1815,7 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-55682c5b5391692"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-55682c5b5391692"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
@@ -1823,7 +1823,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-55682c5b5391692"] .mpc-icon-column__heading {
 			margin-top: 5px;
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1831,7 +1831,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-55682c5b5391692"] .mpc-icon-column__description {
-			color: #cd9f58;
+			color: #D08B0B;
 			text-align: center;
 		}
 
@@ -1865,7 +1865,7 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-12682c5b5391a6d"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-12682c5b5391a6d"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
@@ -1873,7 +1873,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-12682c5b5391a6d"] .mpc-icon-column__heading {
 			margin-top: 5px;
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1881,7 +1881,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-12682c5b5391a6d"] .mpc-icon-column__description {
-			color: #cd9f58;
+			color: #D08B0B;
 			text-align: center;
 		}
 
@@ -1915,7 +1915,7 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-72682c5b539381b"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-72682c5b539381b"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
@@ -1923,7 +1923,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-72682c5b539381b"] .mpc-icon-column__heading {
 			margin-top: 5px;
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1931,7 +1931,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-72682c5b539381b"] .mpc-icon-column__description {
-			color: #cd9f58;
+			color: #D08B0B;
 			text-align: center;
 		}
 
@@ -1965,7 +1965,7 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-56682c5b5394410"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-56682c5b5394410"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
@@ -1973,7 +1973,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-56682c5b5394410"] .mpc-icon-column__heading {
 			margin-top: 5px;
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1981,7 +1981,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-56682c5b5394410"] .mpc-icon-column__description {
-			color: #cd9f58;
+			color: #D08B0B;
 			text-align: center;
 		}
 
