--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -903,7 +903,7 @@
 																		style="height:450px;">
 																		<div class="qode_google_map"
 																			style="height:450px;" id="map_canvas_92570"
-																			data-addresses='["Flat No: 1802C Ontario Tower, Business Bay, Dubai UAE."]'
+																			data-addresses='["Office no: 1802C Ontario Tower, Business Bay, Dubai UAE."]'
 																			data-custom-map-style="false"
 																			data-color-overlay="#393939"
 																			data-saturation="-100" data-lightness="-60"
@@ -983,7 +983,7 @@
 																				<div class="mpc-icon-column__content">
 																					<div
 																						class="mpc-icon-column__description mpc-typography--default mpc-transition">
-																						<p>Flat No: 1802C Ontario Tower, Business Bay, Dubai UAE.</p>
+																						<p>Office no: 1802C Ontario Tower, Business Bay, Dubai UAE.</p>
 																						
 																					</div>
 																				</div>
@@ -1321,7 +1321,7 @@
 															<div id="text-5" class="widget widget_text">
 																<h5>Dubai</h5>
 																<div class="textwidget">
-																	<p>Flat No: 1802C Ontario Tower, Business Bay, Dubai UAE</p>
+																	<p>Office no: 1802C Ontario Tower, Business Bay, Dubai UAE</p>
 																</div>
 															</div>
 														</div>
