--- a/emergency-medical-services/index.html
+++ b/emergency-medical-services/index.html
@@ -1207,7 +1207,7 @@
 															<div id="text-5" class="widget widget_text">
 																<h5>Dubai</h5>
 																<div class="textwidget">
-																	<p>Flat No: 1802C Ontario Tower, Business Bay, Dubai UAE.<br />
+																	<p>Office no: 1802C Ontario Tower, Business Bay, Dubai UAE.<br />
 																		Email: Info@Meridianprimefm.com<br />
 																		Phone: +97142991801</p>
 																</div>
@@ -1326,7 +1326,7 @@
 
 		.mpc-divider-wrap[data-id="mpc_divider-51682c6c07b8f8d"] .mpc-divider__line>span {
 			border-top-style: solid;
-			border-top-color: #cd9f58;
+			border-top-color: #D08B0B;
 			border-top-width: 2px;
 			margin-top: 1px;
 		}
