--- a/engineering/index.html
+++ b/engineering/index.html
@@ -1374,7 +1374,7 @@
 															<div id="text-5" class="widget widget_text">
 																<h5>Dubai</h5>
 																<div class="textwidget">
-																	<p>Flat No: 1802C Ontario Tower, Business Bay, Dubai UAE.<br />
+																	<p>Office no: 1802C Ontario Tower, Business Bay, Dubai UAE.<br />
 																		Email: Info@Meridianprimefm.com<br />
 																		Phone: +97142991801</p>
 																</div>
@@ -1505,7 +1505,7 @@
 
 		.mpc-divider-wrap[data-id="mpc_divider-20682cf0f6c0c84"] .mpc-divider__line>span {
 			border-top-style: solid;
-			border-top-color: #cd9f58;
+			border-top-color: #D08B0B;
 			border-top-width: 2px;
 			margin-top: 1px;
 		}
@@ -1577,7 +1577,7 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-22682cf0f6c7cec"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-22682cf0f6c7cec"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
@@ -1585,7 +1585,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-22682cf0f6c7cec"] .mpc-icon-column__heading {
 			margin-top: 5px;
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1594,7 +1594,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-22682cf0f6c7cec"] .mpc-icon-column__description {
 			margin-top: 20px;
-			color: #cd9f58;
+			color: #D08B0B;
 			text-align: center;
 		}
 
@@ -1628,7 +1628,7 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-56682cf0f6c8536"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-56682cf0f6c8536"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
@@ -1636,7 +1636,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-56682cf0f6c8536"] .mpc-icon-column__heading {
 			margin-top: 5px;
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1644,7 +1644,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-56682cf0f6c8536"] .mpc-icon-column__description {
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1680,7 +1680,7 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-46682cf0f6c8993"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-46682cf0f6c8993"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
@@ -1688,7 +1688,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-46682cf0f6c8993"] .mpc-icon-column__heading {
 			margin-top: 5px;
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1696,7 +1696,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-46682cf0f6c8993"] .mpc-icon-column__description {
-			color: #cd9f58;
+			color: #D08B0B;
 			text-align: center;
 		}
 
@@ -1730,7 +1730,7 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-70682cf0f6c8f19"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-70682cf0f6c8f19"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
@@ -1738,7 +1738,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-70682cf0f6c8f19"] .mpc-icon-column__heading {
 			margin-top: 5px;
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1746,7 +1746,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-70682cf0f6c8f19"] .mpc-icon-column__description {
-			color: #cd9f58;
+			color: #D08B0B;
 			text-align: center;
 		}
 
@@ -1780,7 +1780,7 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-16682cf0f6c9384"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-16682cf0f6c9384"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
@@ -1788,7 +1788,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-16682cf0f6c9384"] .mpc-icon-column__heading {
 			margin-top: 5px;
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1796,7 +1796,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-16682cf0f6c9384"] .mpc-icon-column__description {
-			color: #cd9f58;
+			color: #D08B0B;
 			text-align: center;
 		}
 
@@ -1830,7 +1830,7 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-23682cf0f6c97b8"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-23682cf0f6c97b8"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
@@ -1838,7 +1838,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-23682cf0f6c97b8"] .mpc-icon-column__heading {
 			margin-top: 5px;
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1846,7 +1846,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-23682cf0f6c97b8"] .mpc-icon-column__description {
-			color: #cd9f58;
+			color: #D08B0B;
 			text-align: center;
 		}
 
