--- a/al-fajer-fm-careers/index.html
+++ b/al-fajer-fm-careers/index.html
@@ -1117,7 +1117,7 @@
 															<div id="text-5" class="widget widget_text">
 																<h5>Dubai</h5>
 																<div class="textwidget">
-																	<p>Flat No: 1802C Ontario Tower, Business Bay, Dubai UAE<br />
+																	<p>Office no: 1802C Ontario Tower, Business Bay, Dubai UAE<br />
 																		Email: Info@Meridianprimefm.com<br />
 																		Phone: +97142991801</p>
 																</div>
