--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1172,7 +1172,7 @@
 															<div id="text-5" class="widget widget_text">
 																<h5>Dubai</h5>
 																<div class="textwidget">
-																	<p>Flat No: 1802C Ontario Tower, Business Bay, Dubai UAE<br />
+																	<p>Office no: 1802C Ontario Tower, Business Bay, Dubai UAE<br />
 																		Email: Info@Meridianprimefm.com<br />
 																		Phone: +97142991801</p>
 																</div>
@@ -1263,7 +1263,7 @@
 		}
 
 		.mpc-image[data-id="mpc_image-52682c5f6b18c14"] .mpc-item-overlay {
-			background: #cd9f58;
+			background: #D08B0B;
 		}
 
 		.mpc-image[data-id="mpc_image-52682c5f6b18c14"] .mpc-icon-anchor {
@@ -1325,7 +1325,7 @@
 		}
 
 		.mpc-image[data-id="mpc_image-81682c5f6b1aed5"] .mpc-item-overlay {
-			background: #cd9f58;
+			background: #D08B0B;
 		}
 
 		.mpc-image[data-id="mpc_image-81682c5f6b1aed5"] .mpc-icon-anchor {
@@ -1387,7 +1387,7 @@
 		}
 
 		.mpc-image[data-id="mpc_image-28682c5f6b1bb37"] .mpc-item-overlay {
-			background: #cd9f58;
+			background: #D08B0B;
 		}
 
 		.mpc-image[data-id="mpc_image-28682c5f6b1bb37"] .mpc-icon-anchor {
@@ -1449,7 +1449,7 @@
 		}
 
 		.mpc-image[data-id="mpc_image-62682c5f6b1ea0b"] .mpc-item-overlay {
-			background: #cd9f58;
+			background: #D08B0B;
 		}
 
 		.mpc-image[data-id="mpc_image-62682c5f6b1ea0b"] .mpc-icon-anchor {
@@ -1511,7 +1511,7 @@
 		}
 
 		.mpc-image[data-id="mpc_image-38682c5f6b1f3d8"] .mpc-item-overlay {
-			background: #cd9f58;
+			background: #D08B0B;
 		}
 
 		.mpc-image[data-id="mpc_image-38682c5f6b1f3d8"] .mpc-icon-anchor {
