--- a/hospitality/index.html
+++ b/hospitality/index.html
@@ -1316,7 +1316,7 @@
 															<div id="text-5" class="widget widget_text">
 																<h5>Dubai</h5>
 																<div class="textwidget">
-																	<p>Flat No: 1802C Ontario Tower, Business Bay, Dubai UAE.<br />
+																	<p>Office no: 1802C Ontario Tower, Business Bay, Dubai UAE.<br />
 																		Email: Info@Meridianprimefm.com<br />
 																		Phone: +97142991801</p>
 																</div>
@@ -1435,7 +1435,7 @@
 
 		.mpc-divider-wrap[data-id="mpc_divider-1682cc4f2140b5"] .mpc-divider__line>span {
 			border-top-style: solid;
-			border-top-color: #cd9f58;
+			border-top-color: #D08B0B;
 			border-top-width: 2px;
 			margin-top: 1px;
 		}
@@ -1468,7 +1468,7 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-28682cc4f214ec2"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-28682cc4f214ec2"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
@@ -1476,7 +1476,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-28682cc4f214ec2"] .mpc-icon-column__heading {
 			margin-top: 5px;
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1484,7 +1484,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-28682cc4f214ec2"] .mpc-icon-column__description {
-			color: #cd9f58;
+			color: #D08B0B;
 			text-align: center;
 		}
 
@@ -1521,7 +1521,7 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-100682cc4f215ec8"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-100682cc4f215ec8"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
@@ -1529,7 +1529,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-100682cc4f215ec8"] .mpc-icon-column__heading {
 			margin-top: 5px;
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1537,7 +1537,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-100682cc4f215ec8"] .mpc-icon-column__description {
-			color: #cd9f58;
+			color: #D08B0B;
 			text-align: center;
 		}
 
@@ -1571,7 +1571,7 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-26682cc4f2165ba"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-26682cc4f2165ba"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
@@ -1579,7 +1579,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-26682cc4f2165ba"] .mpc-icon-column__heading {
 			margin-top: 5px;
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1587,7 +1587,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-26682cc4f2165ba"] .mpc-icon-column__description {
-			color: #cd9f58;
+			color: #D08B0B;
 			text-align: center;
 		}
 
@@ -1624,7 +1624,7 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-14682cc4f216dc0"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-14682cc4f216dc0"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
@@ -1632,7 +1632,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-14682cc4f216dc0"] .mpc-icon-column__heading {
 			margin-top: 5px;
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1640,7 +1640,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-14682cc4f216dc0"] .mpc-icon-column__description {
-			color: #cd9f58;
+			color: #D08B0B;
 			text-align: center;
 		}
 
