--- a/security/index.html
+++ b/security/index.html
@@ -1397,7 +1397,7 @@
 															<div id="text-5" class="widget widget_text">
 																<h5>Dubai</h5>
 																<div class="textwidget">
-																	<p>Flat No: 1802C Ontario Tower, Business Bay, Dubai UAE.<br />
+																	<p>Office no: 1802C Ontario Tower, Business Bay, Dubai UAE.<br />
 																		Email: Info@Meridianprimefm.com<br />
 																		Phone: +97142991801</p>
 																</div>
@@ -1528,7 +1528,7 @@
 
 		.mpc-divider-wrap[data-id="mpc_divider-40682c4ffec6d14"] .mpc-divider__line>span {
 			border-top-style: solid;
-			border-top-color: #cd9f58;
+			border-top-color: #D08B0B;
 			border-top-width: 2px;
 			margin-top: 1px;
 		}
@@ -1600,7 +1600,7 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-35682c4ffeccb14"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-35682c4ffeccb14"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
@@ -1608,7 +1608,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-35682c4ffeccb14"] .mpc-icon-column__heading {
 			margin-top: 5px;
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1616,7 +1616,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-35682c4ffeccb14"] .mpc-icon-column__description {
-			color: #cd9f58;
+			color: #D08B0B;
 			text-align: center;
 		}
 
@@ -1650,7 +1650,7 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-62682c4ffecd65a"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-62682c4ffecd65a"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
@@ -1658,7 +1658,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-62682c4ffecd65a"] .mpc-icon-column__heading {
 			margin-top: 5px;
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1666,7 +1666,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-62682c4ffecd65a"] .mpc-icon-column__description {
-			color: #cd9f58;
+			color: #D08B0B;
 			text-align: center;
 		}
 
@@ -1700,7 +1700,7 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-93682c4ffecdd02"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-93682c4ffecdd02"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
@@ -1708,7 +1708,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-93682c4ffecdd02"] .mpc-icon-column__heading {
 			margin-top: 5px;
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1716,7 +1716,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-93682c4ffecdd02"] .mpc-icon-column__description {
-			color: #cd9f58;
+			color: #D08B0B;
 			text-align: center;
 		}
 
@@ -1750,7 +1750,7 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-19682c4ffeceb49"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-19682c4ffeceb49"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
@@ -1758,7 +1758,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-19682c4ffeceb49"] .mpc-icon-column__heading {
 			margin-top: 5px;
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1766,7 +1766,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-19682c4ffeceb49"] .mpc-icon-column__description {
-			color: #cd9f58;
+			color: #D08B0B;
 			text-align: center;
 		}
 
@@ -1800,7 +1800,7 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-73682c4ffecefda"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-73682c4ffecefda"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
@@ -1808,7 +1808,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-73682c4ffecefda"] .mpc-icon-column__heading {
 			margin-top: 5px;
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1816,7 +1816,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-73682c4ffecefda"] .mpc-icon-column__description {
-			color: #cd9f58;
+			color: #D08B0B;
 			text-align: center;
 		}
 
@@ -1850,7 +1850,7 @@
 		.mpc-circle-icons .mpc-icon-column[data-id="mpc_icon_column-3682c4ffecf3bd"]:hover .mpc-icon-column__content-wrap,
 		.mpc-icon-column[data-id="mpc_icon_column-3682c4ffecf3bd"]:hover {
 			border-width: 2px;
-			border-color: #cd9f58;
+			border-color: #D08B0B;
 			border-style: solid;
 			border-radius: 20px;
 			background: #ffffff;
@@ -1858,7 +1858,7 @@
 
 		.mpc-icon-column[data-id="mpc_icon_column-3682c4ffecf3bd"] .mpc-icon-column__heading {
 			margin-top: 5px;
-			color: #cd9f58;
+			color: #D08B0B;
 			font-size: 17px;
 			line-height: 1.4;
 			text-align: center;
@@ -1866,7 +1866,7 @@
 		}
 
 		.mpc-icon-column[data-id="mpc_icon_column-3682c4ffecf3bd"] .mpc-icon-column__description {
-			color: #cd9f58;
+			color: #D08B0B;
 			text-align: center;
 		}
 
