--- a/textured-paints/index.html
+++ b/textured-paints/index.html
@@ -1203,7 +1203,7 @@
 															<div id="text-5" class="widget widget_text">
 																<h5>Dubai</h5>
 																<div class="textwidget">
-																	<p>Flat No: 1802C Ontario Tower, Business Bay, Dubai UAE.<br />
+																	<p>Office no: 1802C Ontario Tower, Business Bay, Dubai UAE.<br />
 																		Email: Info@Meridianprimefm.com<br />
 																		Phone: +97142991801</p>
 																</div>
@@ -1322,7 +1322,7 @@
 
 		.mpc-divider-wrap[data-id="mpc_divider-33682cc5df8faf0"] .mpc-divider__line>span {
 			border-top-style: solid;
-			border-top-color: #cd9f58;
+			border-top-color: #D08B0B;
 			border-top-width: 2px;
 			margin-top: 1px;
 		}
