page name change

--- a/engineering/index.html
+++ b/engineering/index.html
@@ -749,10 +749,9 @@
 															</li>
 															<li id="nav-menu-item-1496"
 																class="menu-item menu-item-type-post_type menu-item-object-page ">
-																<a href="../emergency-medical-services/index.html"
+																<a href="../manpower-services/index.html"
 																	class=""><i
-																		class="menu_icon blank fa"></i><span>Emergency
-																		Medical Services</span><span
+																		class="menu_icon blank fa"></i><span>Manpower Services</span><span
 																		class="plus"></span></a>
 															</li>
 														</ul>
@@ -860,8 +859,8 @@
 													</li>
 													<li id="mobile-menu-item-1496"
 														class="menu-item menu-item-type-post_type menu-item-object-page ">
-														<a href="../emergency-medical-services/index.html"
-															class=""><span>Emergency Medical Services</span></a><span
+														<a href="../manpower-services/index.html"
+															class=""><span>Manpower Services</span></a><span
 															class="mobile_arrow"><i class="fa fa-angle-right"></i><i
 																class="fa fa-angle-down"></i></span>
 													</li>
