--- a/security/index.html
+++ b/security/index.html
@@ -743,10 +743,9 @@
 																		Paints</span><span class="plus"></span></a></li>
 															<li id="nav-menu-item-1496"
 																class="menu-item menu-item-type-post_type menu-item-object-page ">
-																<a href="../emergency-medical-services/index.html"
+																<a href="../manpower-services/index.html"
 																	class=""><i
-																		class="menu_icon blank fa"></i><span>Emergency
-																		Medical Services</span><span
+																		class="menu_icon blank fa"></i><span>Manpower Services</span><span
 																		class="plus"></span></a></li>
 														</ul>
 													</div>
@@ -844,8 +843,8 @@
 																class="fa fa-angle-down"></i></span></li>
 													<li id="mobile-menu-item-1496"
 														class="menu-item menu-item-type-post_type menu-item-object-page ">
-														<a href="../emergency-medical-services/index.html"
-															class=""><span>Emergency Medical Services</span></a><span
+														<a href="../manpower-services/index.html"
+															class=""><span>Manpower Services</span></a><span
 															class="mobile_arrow"><i class="fa fa-angle-right"></i><i
 																class="fa fa-angle-down"></i></span></li>
 												</ul>
