--- a/engineering/index.html
+++ b/engineering/index.html
@@ -1029,9 +1029,9 @@
 																	<div
 																		class="wpb_text_column wpb_content_element  vc_custom_1596438064844">
 																		<div class="wpb_wrapper">
-																			<p style="text-align: justify;">Meridian Prime Facilities Management Services LLC
-																				FM&rsquo;s engineering and maintenance
-																				division has over 350 trained and highly
+																			<p >Meridian Prime Facilities Management Services LLC
+																				FMs engineering and maintenance
+																				division has over 150 trained and highly
 																				skilled professionals and technicians
 																				providing residential and commercial
 																				maintenance services in Dubai and across
@@ -1046,8 +1046,7 @@
 																				solutions. We are proactive in our
 																				approach when it comes to your
 																				maintenance needs. We can help with
-																				comprehensive Mechanical, Electrical
-																				&amp; Plumbing (MEP) work. Our methods
+																				comprehensive Mechanical, Electrical Plumbing (MEP) work. Our methods
 																				are designed to optimize the performance
 																				of your mechanical and electrical
 																				utilities and in turn, extend the
