--- a/hospitality/index.html
+++ b/hospitality/index.html
@@ -1026,11 +1026,9 @@
 																		<div class="wpb_wrapper">
 																			<p style="text-align: justify;">With the
 																				ever-evolving hospitality market in the
-																				region, our hospitality division at Al
-																				Fajer FM is adept to meet the industry
+																				region, our hospitality division at Meridian Prime FM is adept to meet the industry
 																				needs with a host of services while
 																				ensuring unparalleled performance.</p>
-																			<p>&nbsp;</p>
 																			<p style="text-align: justify;">We provide
 																				highly professional and well-trained
 																				receptionists and concierge services.
@@ -1039,12 +1037,10 @@
 																				Our employees are known for their
 																				excellent work ethics and positive
 																				attitude.</p>
-																			<p>&nbsp;</p>
 																			<p style="text-align: justify;">A fleet of
 																				young, adaptable staff with a pleasing
 																				personality are carefully selected to
 																				fit in to client requirements</p>
-																			<p>&nbsp;</p>
 
 																		</div>
 																	</div>
